[package]
name = "webrtc-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
base64 = "0.13.0"
bytes = "1.2.1"
exp-golomb = "0.1.0"
log = "0.4.17"
serde = "1.0.151"
tokio = { version = "1.25.0", features = ["full"] }
webrtc = "0.6"

[dev-dependencies]
serde_json = "1.0.91"
env_logger = "0.10.0"
